Crash in [@ mozilla::gl::BindAnglePlanes::BindAnglePlanes]
Categories
(Core :: Graphics, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox84 | --- | unaffected |
| firefox85 | --- | unaffected |
| firefox86 | --- | fixed |
People
(Reporter: aryx, Assigned: jgilbert)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/a48c7198-8ff3-431e-bbe8-985f70210116
MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(false) (ok &= bool(egl->fStreamPostD3DTextureANGLE(stream, texD3D, postAttribs)))
Top 10 frames of crashing thread:
0 xul.dll mozilla::gl::BindAnglePlanes::BindAnglePlanes gfx/gl/GLBlitHelperD3D.cpp:105
1 xul.dll mozilla::gl::GLBlitHelper::BlitAngleYCbCr const gfx/gl/GLBlitHelperD3D.cpp:298
2 xul.dll mozilla::gl::GLBlitHelper::BlitSdToFramebuffer gfx/gl/GLBlitHelper.cpp:702
3 xul.dll mozilla::webgl::TexUnpackImage::TexOrSubImage const dom/canvas/TexUnpackBlob.cpp:788
4 xul.dll mozilla::WebGLTexture::TexImage dom/canvas/WebGLTextureUpload.cpp:1071
5 xul.dll mozilla::WebGLContext::TexImage const dom/canvas/WebGLContextTextures.cpp:201
6 xul.dll mozilla::dom::WebGLParent::RecvDispatchCommands dom/canvas/WebGLParent.cpp:72
7 xul.dll mozilla::dom::PWebGLParent::OnMessageReceived ipc/ipdl/PWebGLParent.cpp:201
8 xul.dll mozilla::layers::PCompositorManagerParent::OnMessageReceived ipc/ipdl/PCompositorManagerParent.cpp:205
9 xul.dll mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2077
| Reporter | ||
Comment 1•4 years ago
|
||
Is there a reason the bug 1640607 has been removed from the 'Regressed By' field?
Comment 2•4 years ago
|
||
Updated and commented status for bug 1640607, after posting no idea what happened and the regressor/regressed field changed for the bug(s).
Wasn't an intended change, fields probably reset or I clicked to remove by mistake.
Updated•4 years ago
|
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 3•4 years ago
|
||
I think this is just some of the edge-case error handling that we expect to nearly-almost-always succeed, but will very rarely fail due to device loss and such.
I had forgotten that MOZ_ALWAYS_TRUE now crashes everywhere but !DEBUG Release channel builds, including !DEBUG Nightly builds. We don't want this to crash in that case.
Given our numbers here and the size of the Nightly population, this is about the (very very low) frequency that we expect, so that's good.
| Assignee | ||
Comment 4•4 years ago
|
||
Comment 6•4 years ago
|
||
| bugherder | ||
Description
•