Bug 1687231 - Make failures non-fatal in Nightly !DEBUG builds. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D102370